@@ -1,4 +1,5 @@
 [mypy]
+exclude = tests
 show_column_numbers=True
 show_error_codes = True
 
@@ -26,8 +27,3 @@ warn_unreachable=False
 
 strict_equality=True
 ignore_missing_imports=True
-
-[mypy-responses.tests.*]
-disallow_untyped_defs=False
-disallow_untyped_calls=False
-disallow_any_decorated=False
